--- a/style.css
+++ b/style.css
@@ -1,13 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&family=Poppins:wght@300;400;500;700&display=swap');
-bodys
+body
 {
     font-family: 'Open Sans', sans-serif;
 font-family: 'Poppins', sans-serif;
+margin: 0;
 }
 .head1 {
-    color: #EA580C;
+    background-color: #EA580C;
+    color: white;
     text-align: center;
-    padding: 0.2rem;
+    padding: 1rem;
+    margin-top: 0;
+    
 }
 
 .container {
@@ -76,4 +80,44 @@ td {
     border: solid 2px #EA580C;
     padding: 1rem;
 
+}
+footer {
+    background-color: #EA580C;
+    /* padding: 2rem; */
+    text-align: center;
+    color: white;
+    border-top-right-radius: 1rem;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 100px;
+   
+   
+    
+
+}
+
+.footer .links {
+    color: white;
+}
+
+.footer ul {
+    padding-inline-start: 0px;
+    
+}
+
+.footer .footer-header {
+    font-size: large;
+    font-weight: bold;
+}
+.links {
+    text-decoration: none;
+
+}
+.list-inline {
+    display: inline;
+    padding: 0rem 0.5rem;
+}
+.non-bull {
+    list-style: none;
 }
