--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ margin: 0;
     text-align: center;
     padding: 1rem;
     margin-top: 0;
-    border-top-left-radius: 1rem;
+    border-bottom-left-radius: 1rem;
     
 }
 
